--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -68,7 +68,8 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Brief Description</label>
-            <textarea type="" class="form-control" id="exampleInputPassword1" placeholder="" name="description"></textarea>
+            <textarea type="" class="form-control" id="exampleInputPassword1" placeholder="" name="description"
+                required></textarea>
         </div>
         <div class="form-group">
             <label for="exampleFormControlSelect1">Categorize your recipe</label>
