--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,12 +16,15 @@
             <h1 class="h3 mb-3 " style="text-align: center"> Sign in</h1>
             <label for="InputEmail">Email</label>
 
-            <input type="email" id="user" class="form-control" placeholder="Enter email" required="" autofocus="">
+            <input type="email" id="user" class="form-control" placeholder="Enter email" required="" autofocus="" name="email">
             <label>Password</label>
-            <input type="password" id="pass" class="form-control" placeholder="Enter password" required="" autofocus="">
+            <input type="password" id="pass" class="form-control" placeholder="Enter password" required="" autofocus=""
+                name="password">
 
-            <button class="btn my-btn btn-block mb-2" type="submit" id="Signin">Sign in</button>
-            <a href="#" id="forgot_pswd">Forgot password?</a>
+            {{!-- <button class="btn my-btn btn-block mb-2" type="submit" id="Signin">Sign in</button> --}}
+            <input type="submit" class="btn my-btn btn-block mb-2">LOG IN
+            <a href=" #" id="forgot_pswd">Forgot
+                password?</a>
             <hr>
 
             <button class="btn my-btn btn-block" type="button" id="btn-signup">Not Registered? Signup</button>
