User Rating Changes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,9 +12,11 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/public/css/home.css" />
+	<link rel="stylesheet" href="/public/css/font-awesome.min.css" />
 
 
-</head>
+</head>s
 
 <body>
 
