--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -257,7 +257,7 @@
                          {{!-- <input type="text" placeholder="Rate" /> --}}
                     
                     </div>
-            <form class="form-signin" action="/" method="POST">
+            <form class="form-signin" action="/recipe" method="POST">
                     <div class="col-md-12">
                         <div class="stars">{{this.rating}}
                             <input type="radio" style="background-color:blue;" name="star" class="star-1" id="star-1" />
@@ -317,6 +317,7 @@
     </footer>
     <!-- Footer section end -->
 
+    <!--====== Javascripts & Jquery ======-->
 </body>
 
 </html>
