--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -126,7 +126,7 @@
             </div>
           </div>
         <div class="card text-left">
-          <img class="card-img-top round-image" src="/assets/instagram/1.jpg"
+          <img class="card-img-top  round-image" src="//instagram/1.jpg"
           alt=""
          >
           <div class="card-body">
