--- a/public/css/viewRecipe.css
+++ b/public/css/viewRecipe.css
@@ -1,727 +1,156 @@
-* {
-  box-sizing: border-box;
+.x-large {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
-html,
-body {
+
+.large {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.lead {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.line {
+  height: 1px;
+  background: #ccc;
+  margin: 1.5rem 0;
+}
+
+.bg-white {
+  background-color: white;
+  color: #333;
+  border: #ccc 1px solid;
+}
+
+.dark-overlay {
   height: 100%;
-  font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.table th,
+.table td {
+  padding: 1rem;
+  text-align: left;
+}
+
+.table th {
+  background: #f4f4f4;
+}
+
+.form-group {
+  margin: 1.2rem 0;
+}
+
+.form-text {
+  display: block;
+  margin-top: 0.3rem;
+  color: #888;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
+.form select,
+.form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+}
+
+.form input[type="submit"] {
+  font: inherit;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
-  font-weight: 500;
-  color: #474747;
+  padding: 0;
 }
 
-h1 {
-  font-size: 70px;
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background-color: white;
+  color: #333;
 }
 
-h2 {
-  font-size: 36px;
+a {
+  text-decoration: none;
+  color: #17a2b8;
 }
 
-h3 {
-  font-size: 30px;
-}
-
-h4 {
-  font-size: 24px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 16px;
-}
-
-p {
-  font-size: 14.1px;
-  color: #838383;
-  line-height: 2.1;
+ul {
+  list-style: none;
 }
 
 img {
-  max-width: 100%;
-}
-
-input:focus,
-select:focus,
-button:focus,
-textarea:focus {
-  outline: none;
-}
-
-a:hover,
-a:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-ul,
-ol {
-  padding: 0;
-  margin: 0;
-}
-
-/*---------------------
-      Helper CSS
-  -----------------------*/
-
-.section-title {
-  margin-bottom: 48px;
-  position: relative;
-  padding-top: 18px;
-}
-
-.section-title:after {
-  position: absolute;
-  content: "";
-  width: 56px;
-  height: 5px;
-  left: 0;
-  top: 0;
-  background: white;
-  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
-  clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
-}
-
-.section-title h2,
-.section-title h3 {
-  font-weight: 700;
-}
-
-.set-bg {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-}
-
-.spad {
-  padding-top: 96px;
-  padding-bottom: 96px;
-}
-
-.text-white h1,
-.text-white h2,
-.text-white h3,
-.text-white h4,
-.text-white h5,
-.text-white h6,
-.text-white p,
-.text-white span,
-.text-white li,
-.text-white a {
-  color: #838383;
-}
-.text-white span {
-  color: white !important;
-}
-.rating i {
-  color: #fbb710;
-}
-
-.rating .is-fade {
-  color: #e0e3e4;
-}
-
-/*---------------------
-      Commom elements
-  -----------------------*/
-
-/* buttons */
-
-.site-btn {
-  display: inline-block;
-  min-width: 178px;
-  text-align: center;
-  border: none;
-  padding: 18px 5px;
-  font-weight: 400;
-  font-size: 14px;
-  position: relative;
-  color: white;
-  cursor: pointer;
-  background: #df2b2a;
-}
-
-/*------------------
-    Header section
-  ---------------------*/
-
-/* .header-section {
-    clear: both;
-  } */
-
-.header-top {
-  background: #df2b2a;
-  overflow: hidden;
-  padding: 18px 0;
-}
-
-.header-social {
-  float: left;
-}
-
-.header-social a {
-  color: white;
-  margin-right: 35px;
-}
-
-.user-panel {
-  float: right;
-  color: white;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.user-panel a {
-  color: white;
-}
-
-.header-bottom {
-  padding: 38px 0;
-  position: relative;
-}
-
-.site-logo {
-  display: inline-block;
-  font-family: "Dancing Script", cursive;
-  font-size: 15px;
-  font-weight: 500;
-  color: #474747;
-  padding: 25px 20px;
-}
-
-.nav-switch {
-  display: none;
-}
-
-.main-menu,
-.footer-menu {
-  list-style: none;
-  float: right;
-  margin-right: 0px;
-}
-
-.main-menu li,
-.footer-menu li {
-  display: inline;
-}
-
-.main-menu li a,
-.footer-menu li a {
-  display: inline-block;
-  font-size: 15px;
-  font-weight: 500;
-  color: black;
-  padding: 25px 20px;
-}
-
-.main-menu li a:hover,
-.footer-menu li a:hover {
-  color: #838383;
-}
-
-.header-search {
-  float: right;
-  margin-top: 15px;
-}
-
-.header-search a {
-  height: 37px;
-  width: 34px;
-  border: none;
-  background: white;
-  color: #838383;
-  border-radius: 4px;
-  display: inline-block;
-  text-align: center;
-  padding-top: 7px;
-}
-
-/*------------------
-    Hero Section
-  ---------------------*/
-
-.hero-section {
-  clear: both;
-}
-
-.hero-slide-item {
-  height: 694px;
-  display: table;
   width: 100%;
-  overflow: hidden;
 }
 
-.hs-text {
-  vertical-align: middle;
-  display: table-cell;
+.landing {
+  position: relative;
+  background: url("../../images/showcase.jpg") no-repeat center center/cover;
+  height: 100vh;
+}
+
+.landing-inner {
+  color: white;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
 }
 
-.hs-title-1,
-.hs-title-2,
-.hs-title-3 {
-  font-weight: 700;
-  color: #838383;
-  position: relative;
-  margin-bottom: 10px;
+.post-form.header {
+  padding: 0.5rem;
 }
 
-.hs-title-1 span,
-.hs-title-2 span,
-.hs-title-3 span {
-  display: inline-block;
-  border-radius: 5px;
-  position: relative;
-  -webkit-box-shadow: -1px -5px 20px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: -1px -5px 20px 0px rgba(0, 0, 0, 0.3);
-  opacity: 0;
+.post {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
+  grid-gap: 2rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 1rem;
 }
 
-.hs-title-1 {
-  font-size: 72px;
-  z-index: 3;
-}
-
-.hs-title-1 span {
-  padding: 0 28px;
-  background: white;
-  -webkit-transform: rotate(4deg);
-  -ms-transform: rotate(4deg);
-  transform: rotate(4deg);
-}
-
-.hs-title-2 {
-  font-size: 48px;
-  z-index: 4;
-}
-
-.hs-title-2 span {
-  padding: 5px 28px;
-  background: #fdc856;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  left: 0;
-  top: 0;
-}
-
-.hs-title-3 {
-  font-size: 36px;
-  z-index: 5;
-}
-
-.hs-title-3 span {
-  padding: 10px 28px;
-  background: #bdde64;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  top: 0;
-}
-
-/*------------------
-    Footer Section
-  ---------------------*/
-
-.footer-section {
-  padding: 60px 70px 50px;
-}
-
-.footer-social {
-  margin-top: 25px;
-}
-
-.footer-social a {
-  color: white;
-  font-size: 14px;
-  margin-right: 30px;
-}
-
-.footer-social a:hover {
-  color: black;
-}
-
-.footer-menu {
-  float: none;
-  margin-right: 0;
-}
-
-.footer-menu li a {
-  padding: 20px 15px;
-  color: white;
-}
-
-.footer-menu li:last-child a {
-  padding-right: 0;
-}
-
-.copyright {
-  margin-bottom: 0;
-  padding-top: 10px;
-  color: white !important;
-}
-
-/*------------------
-    Pages
-  ---------------------
-  ========================*/
-
-.page-top-section {
+.post > div:first-child {
   text-align: center;
 }
 
-.page-top-section h2 {
-  font-size: 72px;
-  display: inline-block;
-  font-weight: 700;
-  color: white;
-  padding: 1px 1px;
-  margin: 56px 0;
-  border-radius: 4px;
-
-  -webkit-box-shadow: 0px 90px 100px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 90px 100px rgba(0, 0, 0, 0.4);
+.post img {
+  width: 150px;
 }
-
-.site-pagination {
-  padding-top: 70px;
-}
-
-.site-pagination a,
-.site-pagination span {
-  min-width: 48px;
-  height: 48px;
-  display: inline-block;
-  text-align: center;
-  padding: 13px 10px 0;
-  font-size: 16px;
-  font-weight: 700;
-  color: #838383;
-  background: #cccccc;
-  margin-right: 4px;
-}
-
-.site-pagination span {
-  background: white;
-}
-
-.recipe-view {
-  text-align: right;
-  padding-top: 20px;
-}
-
-.recipe-view i {
-  font-size: 22px;
-  margin-left: 5px;
-  color: #cccccc;
-  cursor: pointer;
-}
-
-.recipe-view i.active {
-  color: #474747;
-}
-
-/*------------------
-    About Pages
-  ---------------------*/
-
-.sf-warp {
-  /* width: 1229px; */
-  margin: 72px auto 0;
-  padding: 44px 0;
-  background: white;
-}
-.big-search-form {
-  background-color: #df2b2a;
-}
-.big-search-form select {
-  height: 59px;
-  border: none;
-  background: #fff;
-  padding: 0 25px;
-  font-size: 14px;
-  color: #6d6d6d;
-  font-style: italic;
-  float: left;
-  margin-right: 17px;
-  width: calc(23.9% - 17px);
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  padding-right: 35px;
-}
-
-.big-search-form input {
-  height: 59px;
-  border: none;
-  padding: 0 25px;
-  margin-right: 8px;
-  width: calc(40.6% - 17px);
-  float: left;
-  font-size: 14px;
-}
-
-.big-search-form .bsf-btn {
-  border: 2px solid white;
-  height: 59px;
-  font-size: 14px;
-  color: white;
-  min-width: 132px;
-  background: #df2b2a;
-}
-
-.big-search-form ::-webkit-input-placeholder {
-  font-style: italic;
-}
-
-.big-search-form :-ms-input-placeholder {
-  font-style: italic;
-}
-
-.big-search-form ::-ms-input-placeholder {
-  font-style: italic;
-}
-
-.big-search-form ::placeholder {
-  font-style: italic;
-}
-
-/*---------------------
-    Recipe single Pages
-  ------------------------*/
-
-.recipe-view-section .rv-warp {
-  height: 767px;
-  width: 1540px;
-  margin: -45px auto 0px;
-  position: relative;
-  z-index: -1;
-}
-
-.recipe-details-section {
-  padding-top: 64px;
-  padding-bottom: 70px;
-}
-
-.racipe-cata {
-  display: inline-block;
-  background: #df2b2a;
-  color: #838383;
-  font-size: 16px;
-  padding: 14px 20px 12px 30px;
-  position: relative;
-  margin-bottom: 10px;
-}
-
-.racipe-cata span {
-  position: relative;
-  z-index: 1;
-}
-
-.racipe-cata:after {
-  position: absolute;
-  content: "";
-  right: -30px;
-  top: 0;
-  color: transparent;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-top: 50px solid #df2b2a;
-  z-index: 0;
-}
-
-.recipe-meta h2 {
-  font-weight: 600;
-}
-
-.recipe-meta .recipe-date {
-  font-size: 14px;
-  color: #a4a4a4;
-  margin-bottom: 30px;
-}
-
-.recipe-meta .rating {
-  margin-bottom: 55px;
-}
-
-.recipe-meta .rating i {
-  margin-right: 2px;
-}
-
-.recipe-info-list {
-  list-style: none;
-  padding-left: 17px;
-}
-
-.recipe-info-list li {
-  margin-bottom: 50px;
-}
-
-.recipe-info-list h2 {
-  float: left;
-  font-weight: 600;
-  min-width: 60px;
-}
-
-.recipe-info-list p {
-  padding-left: 70px;
-  margin-bottom: 0;
-  padding-top: 13px;
-  font-size: 14px;
-}
-
-.recipe-filter-warp {
-  background: #eff3f7;
-}
-
-.recipe-filter-warp .filter-top {
-  padding-right: 110px;
-  overflow: hidden;
-}
-
-.recipe-filter-warp .filter-top .filter-top-text {
-  background: #df2b2a;
-  padding: 22px 50px;
-  position: relative;
-}
-
-.recipe-filter-warp .filter-top .filter-top-text:after {
-  position: absolute;
-  content: "";
-  width: 60px;
-  height: 120%;
-  right: -30px;
-  top: -20px;
-  background: #df2b2a;
-  -webkit-transform: rotate(22deg);
-  -ms-transform: rotate(22deg);
-  transform: rotate(22deg);
-}
-
-.recipe-filter-warp .filter-top .filter-top-text p {
-  margin-bottom: 0;
-  color: white;
-  font-size: 15px;
-  position: relative;
-  z-index: 1;
-}
-
-.recipe-filter-warp .filter-form-warp {
-  padding: 55px;
-  padding-right: 30px;
-}
-
-.recipe-filter-warp .filter-form-warp h2 {
-  font-weight: 600;
-  margin-bottom: 35px;
-}
-
-.recipe-filter-warp .filter-form .check-warp {
-  display: block;
-  margin-bottom: 25px;
-}
-
-.recipe-filter-warp .filter-form .check-warp:last-child {
-  margin-bottom: 0;
-}
-
-.recipe-filter-warp .filter-form label {
-  font-size: 16px;
-  position: relative;
-  padding-left: 55px;
-  padding-top: 2px;
-  cursor: pointer;
-}
-
-.recipe-filter-warp .filter-form label:after {
-  position: absolute;
-  content: "";
-  width: 27px;
-  height: 27px;
-  left: 0;
-  top: 0;
-  background: #fff;
-  border: 1px solid #aaaaaa;
-}
-
-.recipe-filter-warp .filter-form input[type="checkbox"] {
-  visibility: hidden;
-  position: absolute;
-  z-index: -1;
-}
-
-.recipe-filter-warp .filter-form input[type="checkbox"]:checked + label:after {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: #df2b2a;
-  border-color: black;
-}
-
-.comment-section h4 {
-  font-weight: 600;
-  margin-bottom: 75px;
-}
-
-.comment-form input,
-.comment-form textarea,
-.contact-form input,
-.contact-form textarea {
-  width: 100%;
-  height: 53px;
-  border: none;
-  background: #eff3f7;
-  font-size: 14px;
-  padding: 0 30px;
-  margin-bottom: 25px;
-}
-
-.comment-form textarea,
-.contact-form textarea {
-  height: 232px;
-  padding: 30px;
-}
-
-.comment-form .site-btn,
-.contact-form .site-btn {
-  min-width: 149px;
-}
-
-.comment-form ::-webkit-input-placeholder,
-.contact-form ::-webkit-input-placeholder {
-  font-style: italic;
-}
-
-.comment-form :-ms-input-placeholder,
-.contact-form :-ms-input-placeholder {
-  font-style: italic;
-}
-
-.comment-form ::-ms-input-placeholder,
-.contact-form ::-ms-input-placeholder {
-  font-style: italic;
-}
-
-.comment-form ::placeholder,
-.contact-form ::placeholder {
-  font-style: italic;
-}
-#footer {
-  background-color: #df2b2a;
-}
-
 
 
 form .stars {
@@ -795,4 +224,3 @@ form .stars span {
   -o-transition: -o-width 0.5s;
   transition: width 0.5s;
 }
-
