--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,41 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+        crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/{{style}}.css" />
-    <title>Login</title>
+    <title>Welcome to the login</title>
 </head>
 
 <body>
-    <div id="logreg-forms">
-        <form class="form-signin">
-            <h1 class="h3 mb-3 " style="text-align: center"> Sign in</h1>
-            <label for="InputEmail">Email</label>
+    <section class="container">
+        <div class="parent dark-overlay">
+            <div class="card">
+                <h5 class="card-title text-center m-3">LOGIN</h5>
+                <form class="" name="myform">
+                    <div class="card-body ">
 
-            <input type="email" id="user" class="form-control" placeholder="Enter email" required="" autofocus="" name="email">
-            <label>Password</label>
-            <input type="password" id="pass" class="form-control" placeholder="Enter password" required="" autofocus=""
-                name="password">
+                        <label>Username</label>
+                        <div class="form-group ">
+                            <input type="text" class="form-control form-control-lg" id="password" />
+                        </div>
+                        <label>Password</label>
+                        <div class="form-group ">
+                            <input type="password" class="form-control form-control-lg" id="password" />
+                        </div>
+                        <div class="form-group text-center">
+                            <a href="/home" class="btn btn-lg btn-danger m-3" id="myBtn">Login</a>
+                            <br>
+                            Dont have an account yet? <a href="/signup" class="mt-5">SignUp</a> here.
+                            <a href="/reset" class="mt-5">Reset Password</a>
+                        </div>
+                </form>
 
-            {{!-- <button class="btn my-btn btn-block mb-2" type="submit" id="Signin">Sign in</button> --}}
-            <input type="submit" class="btn my-btn btn-block mb-2">LOG IN
-            <a href=" #" id="forgot_pswd">Forgot
-                password?</a>
-            <hr>
-
-            <button class="btn my-btn btn-block" type="button" id="btn-signup">Not Registered? Signup</button>
-        </form>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
