--- a/views/myCollection.handlebars
+++ b/views/myCollection.handlebars
@@ -47,13 +47,15 @@
               <i class="fas fa-plus"></i> Add Recipe</a
             >
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only"></span></a>
+          <li class="nav-item ">
+            <a class="nav-link" href="/home"
+              >Home<span class="sr-only"></span
+            ></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">My Collection</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/recipes">Recipes</a>
           </li>
 
@@ -67,53 +69,20 @@
         </ul>
       </div>
     </nav>
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="/assets/brooke-lark-275181-unsplash.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="/images/brooke-lark-275181-unsplash.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
-        </div>
+    <section class="page-top-section  card">
+      <img src="./assets/page-top-bg.jpg" alt="" />
+      <div class="container">
+        <h2 class="card-img-overlay">
+          All Recipes
+        </h2>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+    </section>
     <section class="container-fluid">
       <div class="row myx-4">
         <div class="col-12 mt-4">
-          <h1 class="large text-danger my-2">Latest Recipes</h1>
+          {{!--
+          <h1 class="large text-danger my-2">Recipes</h1>
+          --}}
         </div>
       </div>
       <div class="row">
