--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -2,46 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+        crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Signup</title>
+    <link rel="stylesheet" href="/css/{{style}}.css" />
+    <title>SignUp</title>
 </head>
 
 <body>
-    <div id="logreg-forms">
+    <section class="container">
+        <div class="parent dark-overlay">
+            <div class="card">
+                <h5 class="card-title text-center m-3">SIGNUP</h5>
+                <form class="" name="myform" action="/signup" method="POST">
+                    <div class="card-body ">
 
-        <form action="/signup/" class="form-signup">
-            <h1 class="h3 mb-3" style="text-align: center"> Sign up</h1>
-            <p>Please fill in this form to create an account.</p>
-            <hr>
-            <label>Full name</label>
-            <input type="text" id="user-name" class="form-control" placeholder="Enter name" required="" autofocus="">
-            <label>Email</label>
-            <input type="email" id="user-email" class="form-control" placeholder="Enter email" required autofocus="">
+                        <label>FullName</label>
 
-            <label>Password</label><input type="password" id="user-pass" class="form-control" placeholder="Enter password"
-                required autofocus="">
+                        <div class="form-group ">
+                            <input type="text" class="form-control form-control-lg " id="fullname" name="fullname" />
+                        </div>
+                        <br />
+                        <label>Username</label>
+                        <div class="form-group ">
+                            <input type="text" class="form-control form-control-lg" id="password" name="username"/>
+                        </div>
+                        <label>Password</label>
+                        <div class="form-group ">
+                            <input type="password" class="form-control form-control-lg" id="password" name="password" />
+                        </div>
+                        {{!-- <div class="form-group text-center"> --}}
+                            {{!-- <a href="/login" class="btn btn-lg btn-danger m-2 " id="myBtn">SignUp</a> --}}
+                             
+                            <input
+                            type="submit"
+                            class="btn btn-danger btn-block text-center"
+                            value="SignUp"
+                            />               
+                            <br>
+                            Already have an account <a href="/login" class="">Login</a> here.
+                        {{!-- </div> --}}
+                </form>
 
-            <label>Repeat Password</label>
-            <input type="password" id="user-repeatpass" class="form-control" placeholder="Enter password again"
-                required autofocus="">
-
-            <button class="btn my-btn btn-block" type="submit">Sign Up</button>
-            <a href="#" id="cancel_signup">Back</a>
-        </form>
-        <br>
-
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
